--- a/index.html
+++ b/index.html
@@ -2705,7 +2705,7 @@
           </div>
         </div>
 
-          <div class="movie-item">
+        <div class="movie-item">
           <div class="movie-content">
             <img
               src="https://image.tmdb.org/t/p/original/lKNjGQXTy5WkSjAtLzLzAN9IHCD.jpg"
@@ -7996,7 +7996,7 @@
           </div>
         </div>
 
-         <div class="movie-item">
+        <div class="movie-item">
           <div class="movie-content">
             <img
               src="https://image.tmdb.org/t/p/original/zclBzn3FBzF4i774z0mZjFQw66q.jpg"
@@ -8590,6 +8590,42 @@
                 >
               </div>
               <span class="movie-year-text">1985</span>
+            </div>
+            <div class="action-circle">
+              <a href="#" class="icon AddFavorite">
+                <div class="tooltip">Add to Favorite</div>
+                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+              </a>
+              <a href="#" class="icon RateIt">
+                <div class="tooltip">Rate It</div>
+                <span><i class="fa-solid fa-star"></i></span>
+              </a>
+              <a href="#" class="icon watchlist">
+                <div class="tooltip">Add to Watchlist</div>
+                <span><i class="bx bx-list-plus"></i></span>
+              </a>
+              <a href="https://www.youtube.com" class="icon youtube">
+                <div class="tooltip">Play Trailer</div>
+                <span><i class="fab fa-youtube"></i></span>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="movie-item">
+          <div class="movie-content">
+            <img
+              src="https://image.tmdb.org/t/p/original/m2duGsKjBOl3BB8uFOTnRUzdEhg.jpg"
+              class="movie-poster"
+            />
+            <h2 class="movie-title">The Hurt Locker</h2>
+            <div class="movie-rating">
+              <div class="ratings-container">
+                <span class="movie-rating-text"
+                  ><img src="./images/IMDb_logo.png" /> 8.0</span
+                >
+              </div>
+              <span class="movie-year-text">2008</span>
             </div>
             <div class="action-circle">
               <a href="#" class="icon AddFavorite">
